fix: It will fix flex direction for education on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,4 +215,9 @@ img {
     .reverse-flex {
         flex-direction: column-reverse;
     }
+
+    .d-flex {
+        flex-direction: column;
+        align-items: center;
+    }
 }
